--- a/library.properties
+++ b/library.properties
@@ -4,7 +4,7 @@ version=1.0.0
 
 author=S. Gies (v1.0.0)
 
-maintainer=Movella/Xsens <support@movella.com>
+maintainer=S. Gies <support@movella.com>
 
 sentence=This library demonstrates the basics of communicating with Xsens MTi 1-series devices through SPI. 
 
